@@ -18,6 +18,5 @@
   apt-ftparchive to set up an apt repository based on files in localudebs,
   and let apt know about it by adding that to sources.list.udeb. Then the
   ugly caveat in README could be removed.
-* Too much unnecessary code and data duplication between i386 and amd64.
-* Use udeb depenedncy resolution more. One place it would be useful is to
+* Use udeb depenedency resolution more. One place it would be useful is to
   avoid the long list in pkg-lists/monolithic/common.
