@@ -44,8 +44,8 @@ arch_boot:
 	else \
 		cat boot/ia64/elilo.conf; \
 	fi) \
-	| ./ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
-	| ./bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
+	| ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
+	| bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
 		DEBIAN_VERSION "$(DEBIAN_VERSION)" \
 		BUILD_DATE "$(BUILD_DATE)" \
 		SYSDIR "/efi/boot/" \
@@ -69,7 +69,7 @@ arch_boot_screens:
 	-rm -f $(TEMP_BOOT_SCREENS)/*
 	mkdir -p $(TEMP_BOOT_SCREENS)
 	$(foreach SCREEN,$(wildcard boot/ia64/*.msg boot/ia64/*.msg.with26), \
-		./bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
+		bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
 			DEBIAN_VERSION "$(DEBIAN_VERSION)" \
 			BUILD_DATE "$(BUILD_DATE)" \
 		 < $(SCREEN) > $(TEMP_BOOT_SCREENS)/`basename $(SCREEN)`\
@@ -99,8 +99,8 @@ arch_netboot_dir:
 	else \
 		cat boot/ia64/elilo.conf; \
 	fi) \
-	| ./ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
-	| ./bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
+	| ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
+	| bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
 		DEBIAN_VERSION "$(DEBIAN_VERSION)" \
 		BUILD_DATE "$(BUILD_DATE)" \
 		SYSDIR "$(BOOT_SCREEN_DIR)" \
