@@ -15,5 +15,5 @@ $(INITRD22): $(INITRD)
 	gzip -v9f $(TEMP)/initrd22
 	-rm $(TREE)/ramdisk_settings
 	install -m 644 -D $(TEMP)/initrd22.gz $@
-	./update-manifest $@ $(MANIFEST-INITRD22)
+	update-manifest $@ $(MANIFEST-INITRD22)
 
