@@ -50,7 +50,7 @@ define vme_boot
 	else \
 		cp boot/m68k/vme-vmelilo.conf-floppy $(TEMP)/$(SUB)boot/etc/vmelilo.conf ; \
 	fi ;
-	./makelabel $(DISK_LABEL) $(BUILD_DATE) > $(TEMP)/$(SUB)boot/disk.lbl
+	makelabel $(DISK_LABEL) $(BUILD_DATE) > $(TEMP)/$(SUB)boot/disk.lbl
 	genext2fs -d $(TEMP)/$(SUB)boot -b $(FLOPPY_SIZE) -r 0 $(TEMP)/$(SUB)boot.img
 	$(ROOTCMD) mount -t ext2 -o loop=/dev/loop3 $(TEMP)/$(SUB)boot.img $(TEMP)/mount
 	@echo loopdev $(shell grep $(TEMP)/mount /proc/mounts | cut -d' ' -f 1)
@@ -65,7 +65,7 @@ define vme_boot
 		mv $(TEMP)/$(SUB)boot.img $(TEMP)/$(SUB)boot.img.failed ; \
 	fi ;
 	install -m 644 -D $(TEMP)/$(SUB)boot.img$(GZIPPED) $(FINAL_IMAGE)
-	./update-manifest $(FINAL_IMAGE) $(MANIFEST-INITRD)
+	update-manifest $(FINAL_IMAGE) $(MANIFEST-INITRD)
 endef
 
 #
@@ -75,12 +75,12 @@ endef
 define vme_root 
 	mkdir -p $(TEMP)/$(SUB)root/etc
 	cp $(TEMP_INITRD) $(TEMP)/$(SUB)root/root.bin
-	./makelabel $(DISK_LABEL) $(BUILD_DATE) > $(TEMP)/$(SUB)root/disk.lbl
+	makelabel $(DISK_LABEL) $(BUILD_DATE) > $(TEMP)/$(SUB)root/disk.lbl
 	genext2fs -d $(TEMP)/$(SUB)root -b $(FLOPPY_SIZE) -r 0 $(TEMP)/$(SUB)root.img
 	$(e2fsck) $(TEMP)/$(SUB)root.img || true 
 	$(if $(GZIPPED),gzip -v9f $(TEMP)/$(SUB)root.img)
 	install -m 644 -D $(TEMP)/$(SUB)root.img$(GZIPPED) $(FINAL_IMAGE)
-	./update-manifest $(FINAL_IMAGE) $(MANIFEST-INITRD)
+	update-manifest $(FINAL_IMAGE) $(MANIFEST-INITRD)
 endef
 
 #
@@ -101,7 +101,7 @@ define atari_boot
 	chmod 644 $(TEMP)/$(SUB)boot.img
 
 	# generate a disk label
-	./makelabel $(DISK_LABEL) $(BUILD_DATE) > $(TEMP)/disk.lbl
+	makelabel $(DISK_LABEL) $(BUILD_DATE) > $(TEMP)/disk.lbl
 	mcopy -i$(TEMP)/$(SUB)boot.img $(TEMP)/disk.lbl ::disk.lbl
 
 	mcopy -i$(TEMP)/$(SUB)boot.img $(shell echo $(TEMP_KERNEL) | cut -d' ' -f 1) ::/linux
@@ -114,7 +114,7 @@ define atari_boot
 	$(if $(GZIPPED),gzip -v9f $(TEMP)/$(SUB)boot.img)
 	
 	install -m 644 -D $(TEMP)/$(SUB)boot.img$(GZIPPED) $(FINAL_IMAGE)
-	./update-manifest $(FINAL_IMAGE) $(MANIFEST-INITRD)
+	update-manifest $(FINAL_IMAGE) $(MANIFEST-INITRD)
 endef
 
 #
@@ -127,7 +127,7 @@ define atari_root
 	chmod 644 $(TEMP)/$(SUB)root.img
 
 	# generate a disk label
-	./makelabel $(DISK_LABEL) $(BUILD_DATE) > $(TEMP)/disk.lbl
+	makelabel $(DISK_LABEL) $(BUILD_DATE) > $(TEMP)/disk.lbl
 	mcopy -i$(TEMP)/$(SUB)root.img $(TEMP)/disk.lbl ::disk.lbl
 
 	mcopy -i$(TEMP)/$(SUB)root.img $(TEMP_INITRD) ::initrd.gz
@@ -135,7 +135,7 @@ define atari_root
 	$(if $(GZIPPED),gzip -v9f $(TEMP)/$(SUB)root.img)
 	
 	install -m 644 -D $(TEMP)/$(SUB)root.img$(GZIPPED) $(FINAL_IMAGE)
-	./update-manifest $(FINAL_IMAGE) $(MANIFEST-INITRD)
+	update-manifest $(FINAL_IMAGE) $(MANIFEST-INITRD)
 endef
 
 
@@ -224,18 +224,18 @@ $(TEMP)/bootstra.prg: /usr/share/atari-bootstrap/ataboot.ttp.gz
 
 $(SOME_DEST)/tools/atari/bootstra.prg: $(TEMP)/bootstra.prg
 	install -m 644 -D $< $@
-	./update-manifest $@ $(MANIFEST-ATARI-BOOTSTRA)
+	update-manifest $@ $(MANIFEST-ATARI-BOOTSTRA)
 
 $(SOME_DEST)/tools/atari/bootargs: boot/m68k/atari-bootargs-cdrom 
 	# fix kernel in bootargs
 	#sed -e "s,linux,`basename $(TEMP_KERNEL)`," $< > $(TEMP)/bootargs
 	#install -m 644 -D $(TEMP)/bootargs $@
 	install -m 644 -D $< $@
-	./update-manifest $@ $(MANIFEST-ATARI-BOOTARGS)
+	update-manifest $@ $(MANIFEST-ATARI-BOOTARGS)
 
 $(SOME_DEST)/tools/atari/rawwrite.ttp: /usr/share/atari-bootstrap/rawwrite.ttp.gz 
 	gzip -cd $< > $@
-	./update-manifest $@ $(MANIFEST-ATARI-RAWWRITE)
+	update-manifest $@ $(MANIFEST-ATARI-RAWWRITE)
 
 ATARITOOLS = $(SOME_DEST)/tools/atari/bootstra.prg $(SOME_DEST)/tools/atari/bootargs $(SOME_DEST)/tools/atari/rawwrite.ttp
 
