@@ -8,9 +8,9 @@ MANIFEST-KERNEL = "kernel image for the Broadcom BCM1250 (SWARM) evaluation boar
 
 $(SOME_DEST)/$(EXTRANAME)sibyl:
 	cp /usr/lib/sibyl/sibyl.bin $@
-	./update-manifest $@ "SiByl boot loader"
+	update-manifest $@ "SiByl boot loader"
 
 $(SOME_DEST)/$(EXTRANAME)sibyl.conf:
-	./ramdisk-size-subst $(TEMP_INITRD) < boot/mips/sibyl.conf > $@
-	./update-manifest $@ "SiByl TFTP boot configuration script"
+	ramdisk-size-subst $(TEMP_INITRD) < boot/mips/sibyl.conf > $@
+	update-manifest $@ "SiByl TFTP boot configuration script"
 
