@@ -9,7 +9,7 @@ MANIFEST-KERNEL = "kernel image for Cobalt machines"
 # Add a colo binary plus symlinks
 $(SOME_DEST)/$(EXTRANAME)vmlinux.gz:
 	cp /boot/vmlinux.gz $@
-	./update-manifest $@ "Cobalt boot loader"
+	update-manifest $@ "Cobalt boot loader"
 	ln -s . $(SOME_DEST)/$(EXTRANAME)boot
 
 $(SOME_DEST)/$(EXTRANAME)vmlinux_RAQ.gz:
@@ -21,12 +21,12 @@ $(SOME_DEST)/$(EXTRANAME)vmlinux_raq-2800.gz:
 # CoLo configuration file for NFS
 $(SOME_DEST)/$(EXTRANAME)default.colo:
 	install -m 644 boot/mipsel/colo.nfs $@
-	./update-manifest $@ "Cobalt NFS boot configuration script"
+	update-manifest $@ "Cobalt NFS boot configuration script"
 
 # Create a nfsroot tar file which can easily be extracted (containing all
 # files including proper symlinks).
 $(SOME_DEST)/nfsroot.tar.gz:
 	cp -r $(SOME_DEST)/$(EXTRANAME) $(TEMP)/nfsroot
 	(cd $(TEMP); tar czf - nfsroot) > $@
-	./update-manifest $@ "Cobalt tarball containing the installer nfsroot"
+	update-manifest $@ "Cobalt tarball containing the installer nfsroot"
 
