@@ -48,11 +48,11 @@ cd_content_common:
 	# New-world bootability
 	cp -f boot/powerpc/ofboot.b $(TEMP_CD_TREE)/install/
 	cp -f /usr/lib/yaboot/yaboot $(TEMP_CD_TREE)/install/
-	./bootscreen-subst MEDIA_TYPE "${MEDIA_TYPE}" \
+	bootscreen-subst MEDIA_TYPE "${MEDIA_TYPE}" \
 		DEBIAN_VERSION "${DEBIAN_VERSION}" \
 		BUILD_DATE "${BUILD_DATE}" \
 		< boot/powerpc/boot.msg > $(TEMP_CD_TREE)/install/boot.msg
-	./ramdisk-size-subst $(TEMP_INITRD) \
+	ramdisk-size-subst $(TEMP_INITRD) \
 		< boot/powerpc/yaboot.conf \
 		| sed 's/\$${TYPE}/$(TYPE)/g' \
 		> $(TEMP_CD_TREE)/install/yaboot.conf
