@@ -10,6 +10,6 @@ KERNELIMAGEVERSION = $(KERNELVERSION)
 
 $(DEST)/parmfile.debian:
 	install -m644 boot/s390/parmfile $@
-	./update-manifest $@ "parmfile"
+	update-manifest $@ "parmfile"
 
 DROP_LANG = '.*'
