@@ -12,11 +12,11 @@ MANIFEST-KERNEL = "kernel for tape ipl"
 
 $(DEST)/initrd.debian:
 	ln -fs ../generic/initrd.debian $@
-	./update-manifest $@ "initrd"
+	update-manifest $@ "initrd"
 
 $(DEST)/kernel.debian-nolabel: $(DEST)/kernel.debian
 	(dd bs=1 count=8 && dd bs=1 skip=1 count=0 && printf "\007" && dd) < $< > $@
-	./update-manifest $@ "kernel for tape ipl - nolabel"
+	update-manifest $@ "kernel for tape ipl - nolabel"
 
 $(TEMP)/kernel.debian: $(TEMP)/vmlinuz-tape
 	ln $+ $@
