@@ -21,7 +21,7 @@ arch_miniiso:
 arch_boot_screens:
 	-rm -f $(TEMP_BOOT_SCREENS)/*
 	mkdir -p $(TEMP_BOOT_SCREENS)
-	./bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
+	bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
 		DEBIAN_VERSION "$(DEBIAN_VERSION)" \
 		BUILD_DATE "$(BUILD_DATE)" \
 		< boot/sparc/debian.txt > $(TEMP_BOOT_SCREENS)/debian.txt
