@@ -40,7 +40,7 @@ arch_boot:
 	fi
 
 	# generate a disk label
-	./makelabel $(DISK_LABEL) $(BUILD_DATE) > $(TEMP)/disk.lbl
+	makelabel $(DISK_LABEL) $(BUILD_DATE) > $(TEMP)/disk.lbl
 	mcopy -i$(TEMP_BOOT) $(TEMP)/disk.lbl ::disk.lbl
 
 	# syslinux is used to make the floppy bootable
@@ -49,8 +49,8 @@ arch_boot:
 	else \
 		cat boot/x86/syslinux.cfg; \
 	fi) \
-	| ./ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
-	| ./bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
+	| ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
+	| bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
 		DEBIAN_VERSION "$(DEBIAN_VERSION)" \
 		BUILD_DATE "$(BUILD_DATE)" \
 		KERNEL linux INITRD initrd.gz \
@@ -82,7 +82,7 @@ arch_root:
 	mcopy -i$(TEMP_ROOT) $(TEMP_INITRD_LIST) ::initrd.list
 
 	# generate a disk label
-	./makelabel $(DISK_LABEL) $(BUILD_DATE) > $(TEMP)/disk.lbl
+	makelabel $(DISK_LABEL) $(BUILD_DATE) > $(TEMP)/disk.lbl
 	mcopy -i$(TEMP_ROOT) $(TEMP)/disk.lbl ::disk.lbl
 	$(if $(GZIPPED),gzip -v9f $(TEMP_ROOT))
 
@@ -92,7 +92,7 @@ arch_boot_screens:
 	-rm -f $(TEMP_BOOT_SCREENS)/*
 	mkdir -p $(TEMP_BOOT_SCREENS)
 	$(foreach SCREEN,$(wildcard boot/x86/*.txt boot/x86/*.txt.with26), \
-		./bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
+		bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
 			DEBIAN_VERSION "$(DEBIAN_VERSION)" \
 			BUILD_DATE "$(BUILD_DATE)" \
 			SYSDIR "$(BOOT_SCREEN_DIR)" \
@@ -114,7 +114,7 @@ arch_miniiso:
 		else \
 			cat $(file); \
 		fi) | \
-		./bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
+		bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
 			DEBIAN_VERSION "$(DEBIAN_VERSION)" \
 			BUILD_DATE "$(BUILD_DATE)" "" \
 		       > $(TEMP_CD_TREE)/`basename $(file)` \
@@ -141,8 +141,8 @@ arch_miniiso:
 	else \
 		cat boot/x86/syslinux.cfg; \
 	fi) \
-	| ./ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
-	| ./bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
+	| ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
+	| bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
 		DEBIAN_VERSION "$(DEBIAN_VERSION)" \
 		BUILD_DATE "$(BUILD_DATE)" \
 		KERNEL linux INITRD initrd.gz \
@@ -173,8 +173,8 @@ arch_netboot_dir:
 	else \
 		cat boot/x86/syslinux.cfg; \
 	fi) \
-	| ./ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
-	| ./bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
+	| ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
+	| bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
 		DEBIAN_VERSION "$(DEBIAN_VERSION)" \
 		BUILD_DATE "$(BUILD_DATE)" \
 		SYSDIR "$(BOOT_SCREEN_DIR)" \
@@ -190,8 +190,8 @@ arch_netboot_dir:
 	else \
 		cat boot/x86/syslinux.cfg; \
 	fi) \
-	| ./ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
-	| ./bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
+	| ramdisk-size-subst $(TEMP_INITRD) $(INITRD_2.6) \
+	| bootscreen-subst MEDIA_TYPE "$(MEDIA_TYPE)" \
 		DEBIAN_VERSION "$(DEBIAN_VERSION)" \
 		BUILD_DATE "$(BUILD_DATE)" \
 		SYSDIR "$(BOOT_SCREEN_DIR)" \
